projects/maison/src/apps/jellyfin/jellyfin.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-websecure
  namespace: jellyfin
spec:
  parentRefs:
    - name: default
      namespace: default
  hostnames:
    - media.chezmoi.sh
  rules:
    - backendRefs:
        - name: jellyfin
          port: 80
