projects/maison/src/apps/jellyfin/jellyfin.vpn.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-tailscale
  namespace: jellyfin
spec:
  defaultBackend:
    service:
      name: jellyfin
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - jellyfin
